--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
     <!--   page content -->
     <div data-role="content" data-theme='b' >
       <div class="newFont">
-        <h2 class="myHeader"> My Collection of Movies</h2>
-        <div class="myHeader">Your site to organize your favorite movies.</div>
+        <h2 class="myHeader">This page will show the detail for any particular movie that you clicked 
+          on in the details Page!</h2>
+        <div class="myHeader">This site is used to organize your favorite movies!</div>
       </div>
     </div>
 
@@ -79,8 +80,7 @@
       <input type="text" value="" id="man" />
       Enter leading woman <br />
       <input type="text" value="" id="woman" />
-      Enter YouTube Trailer URL <br />
-      <input type="text" value="" id="URL" />
+
       
         <div class="ui-field-contain">
           <label for="select-genre">Select a Genre</label>
@@ -167,9 +167,12 @@
 
   <!--  content -->
   <div data-role="content" data-theme='c'>
-   <h3>welcome to the details page</h3>
-   <h4>But which li did you click?? How can I know?</h4>
-   <h4>We can now get the ID out of local storage</h4>
+   <h3>Greatings, This is the details page!</h3>
+   <h4>You can click anything in the list; and it will take you here :)</h4>
+   <h4>Now enjoy the ID below</h4>
+   <div class="container">
+    <a href="#" class="arrow down">Down</a>
+  </div>
    <p id="thatMovieID"></p>
   </div>
 
