--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
         <title>Review Site</title>
         <!-- <documentation at http://demos.jquerymobile.com/1.4.1/ > -->
       
-        <link href='https://fonts.googleapis.com/css?family=Nova Flat' rel='stylesheet'>
-      
-        <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+        <link rel="stylesheet" href="file:///C:/Users/Yacqu/Downloads/jquery.mobile.custom/jquery.mobile.custom.structure.css" />
+        <link rel="stylesheet" href="file:///C:/Users/Yacqu/Downloads/jquery.mobile.custom/jquery.mobile.custom.theme.css" />
         <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
         <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
         <script src="main.js"></script>
@@ -121,6 +120,8 @@
      <h4>Now enjoy the ID below</h4>
      <div class="container">
       <text class="ui-input-has-clear">3g45h24brtgj</text>
+      <text class="ui-input-has-clear">jgrfd65ht3r</text>
+      <text class="ui-input-has-clear">by387dd372f</text>
     </div>
      <p id="myList"></p>
     </div>
