--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <div data-role="content" data-theme='c'>
      <h3>Greatings, This is the details page!</h3>
      <h4>You can click anything in the list; and it will take you here :)</h4>
-     <h4>Now enjoy the ID below</h4>
+     <h4>Now enjoy the IDs below</h4>
      <div class="container">
       <text class="ui-input-has-clear">3g45h24brtgj</text>
       <text class="ui-input-has-clear">jgrfd65ht3r</text>
